--- a/Casanova/Casanova/Base.lproj/Main.storyboard
+++ b/Casanova/Casanova/Base.lproj/Main.storyboard
@@ -625,7 +625,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8fR-JU-fL9">
-                                <rect key="frame" x="20" y="30" width="30" height="30"/>
+                                <rect key="frame" x="15" y="30" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="2Ce-Xc-FaJ"/>
                                     <constraint firstAttribute="width" constant="30" id="jUC-VK-48u"/>
@@ -636,7 +636,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="录音" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xdj-nn-LCM">
-                                <rect key="frame" x="186" y="34.666666666666664" width="34.666666666666657" height="21"/>
+                                <rect key="frame" x="189.66666666666666" y="34.666666666666664" width="34.666666666666657" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -644,7 +644,7 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="7id-uu-hUj">
                                 <rect key="frame" x="15" y="80" width="384" height="506"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <mutableString key="text">I disagree. First, TV and video game use correlates with increased obesity. Children who are allowed a device in their bedrooms have 30% increased incidence of obesity. 30% of children with obesity will develop diabetes, and obese individuals are at higher risk for early stroke and heart attack, gravely shortening life expectancy. Largely due to obesity, 21st century children may be the first generation many of whom will not outlive their parents. Second, violent media content can cause child aggression. Young children are increasingly exposed to rising incidence of physical and sexual violence in today’s media. “Grand Theft Auto V” portrays explicit sex, murder, rape, torture and mutilation, as do many movies and TV shows. The U.S. has categorized media violence as a Public Health Risk due to causal impact on child aggression. </mutableString>
+                                <string key="text">I disagree. First, TV and video game use correlates with increased obesity. Children who are allowed a device in their bedrooms have 30% increased incidence of obesity. 30% of children with obesity will develop diabetes, and obese individuals are at higher risk for early stroke and heart attack, gravely shortening life expectancy. Largely due to obesity, 21st century children may be the first generation many of whom will not outlive their parents. Second, violent media content can cause child aggression. Young children are increasingly exposed to rising incidence of physical and sexual violence in today’s media. “Grand Theft Auto V” portrays explicit sex, murder, rape, torture and mutilation, as do many movies and TV shows. The U.S. has categorized media violence as a Public Health Risk due to causal impact on child aggression. </string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
@@ -660,15 +660,15 @@
                         <constraints>
                             <constraint firstItem="p0j-mC-orI" firstAttribute="leading" secondItem="eCe-i9-5jf" secondAttribute="leading" id="9Vb-hx-XGo"/>
                             <constraint firstItem="8fR-JU-fL9" firstAttribute="centerY" secondItem="xdj-nn-LCM" secondAttribute="centerY" id="9uk-fi-exz"/>
-                            <constraint firstItem="8fR-JU-fL9" firstAttribute="leading" secondItem="eCe-i9-5jf" secondAttribute="leading" constant="20" id="DAG-oJ-wUG"/>
+                            <constraint firstItem="8fR-JU-fL9" firstAttribute="leading" secondItem="eCe-i9-5jf" secondAttribute="leading" constant="15" id="DAG-oJ-wUG"/>
                             <constraint firstItem="eCe-i9-5jf" firstAttribute="trailing" secondItem="p0j-mC-orI" secondAttribute="trailing" id="Jmq-mA-dN0"/>
+                            <constraint firstItem="xdj-nn-LCM" firstAttribute="centerX" secondItem="eCe-i9-5jf" secondAttribute="centerX" id="QQK-wc-Sid"/>
                             <constraint firstItem="8fR-JU-fL9" firstAttribute="top" secondItem="eCe-i9-5jf" secondAttribute="top" constant="10" id="YPR-tg-5ZQ"/>
                             <constraint firstItem="7id-uu-hUj" firstAttribute="top" secondItem="8fR-JU-fL9" secondAttribute="bottom" constant="20" id="bl3-mX-Ml8"/>
                             <constraint firstItem="eCe-i9-5jf" firstAttribute="bottom" secondItem="p0j-mC-orI" secondAttribute="bottom" id="lkZ-VW-3Kf"/>
                             <constraint firstItem="eCe-i9-5jf" firstAttribute="trailing" secondItem="7id-uu-hUj" secondAttribute="trailing" constant="15" id="n8o-Kh-jDD"/>
                             <constraint firstItem="p0j-mC-orI" firstAttribute="top" secondItem="7id-uu-hUj" secondAttribute="bottom" id="nl7-0x-nqL"/>
                             <constraint firstItem="7id-uu-hUj" firstAttribute="leading" secondItem="eCe-i9-5jf" secondAttribute="leading" constant="15" id="rzF-Yo-Nmn"/>
-                            <constraint firstItem="xdj-nn-LCM" firstAttribute="leading" secondItem="8fR-JU-fL9" secondAttribute="trailing" constant="136" id="vrb-Pn-J0P"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="eCe-i9-5jf"/>
                     </view>
