--- a/Casanova/Casanova/TopicHeaderTableViewCell.xib
+++ b/Casanova/Casanova/TopicHeaderTableViewCell.xib
@@ -16,11 +16,14 @@
         <array key="Muli.ttf">
             <string>Muli</string>
         </array>
+        <array key="PingFang.ttc">
+            <string>PingFangSC-Medium</string>
+        </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="258" id="KGk-i7-Jjw" customClass="TopicBriefTableViewCell" customModule="Casanova" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="258" id="KGk-i7-Jjw" customClass="TopicHeaderTableViewCell" customModule="Casanova" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="396" height="258"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -35,7 +38,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="inB-G3-hzE" customClass="TagListView" customModule="TagListView">
-                        <rect key="frame" x="30" y="5" width="336" height="100.5"/>
+                        <rect key="frame" x="30" y="10" width="336" height="90.5"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="color" keyPath="textColor">
                                 <color key="value" red="0.29411764705882354" green="0.80392156862745101" blue="0.92941176470588238" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -83,6 +86,7 @@
                             <constraint firstAttribute="height" constant="26" id="ubq-Xv-gEI"/>
                             <constraint firstAttribute="width" constant="68" id="vwL-u1-4Mn"/>
                         </constraints>
+                        <fontDescription key="fontDescription" name="PingFangSC-Medium" family="PingFang SC" pointSize="12"/>
                         <state key="normal" title="我要回答"/>
                     </button>
                 </subviews>
@@ -90,7 +94,7 @@
                     <constraint firstItem="fnf-RI-mDU" firstAttribute="trailing" secondItem="s2L-5p-bKQ" secondAttribute="trailing" id="2Nt-HV-zj7"/>
                     <constraint firstItem="fnf-RI-mDU" firstAttribute="centerY" secondItem="gK1-X5-gjE" secondAttribute="centerY" id="2bs-NS-AYc"/>
                     <constraint firstItem="s2L-5p-bKQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="4DS-yc-XfJ"/>
-                    <constraint firstItem="s2L-5p-bKQ" firstAttribute="top" secondItem="inB-G3-hzE" secondAttribute="bottom" constant="5" id="5Wr-7B-sam"/>
+                    <constraint firstItem="s2L-5p-bKQ" firstAttribute="top" secondItem="inB-G3-hzE" secondAttribute="bottom" constant="10" id="5Wr-7B-sam"/>
                     <constraint firstItem="JE0-rW-mBG" firstAttribute="top" secondItem="s2L-5p-bKQ" secondAttribute="bottom" constant="10" id="Cja-oc-X94"/>
                     <constraint firstItem="gK1-X5-gjE" firstAttribute="bottom" secondItem="XgU-V7-nQX" secondAttribute="bottom" id="DV6-1G-6aR"/>
                     <constraint firstItem="inB-G3-hzE" firstAttribute="leading" secondItem="s2L-5p-bKQ" secondAttribute="leading" id="IhT-gM-S8y"/>
@@ -98,7 +102,7 @@
                     <constraint firstItem="gK1-X5-gjE" firstAttribute="centerY" secondItem="XgU-V7-nQX" secondAttribute="centerY" id="Nan-1T-IvF"/>
                     <constraint firstItem="XgU-V7-nQX" firstAttribute="leading" secondItem="JE0-rW-mBG" secondAttribute="trailing" constant="10" id="Wpw-Wg-mr5"/>
                     <constraint firstAttribute="bottomMargin" secondItem="JE0-rW-mBG" secondAttribute="bottom" constant="10" id="cW5-Gk-4hI"/>
-                    <constraint firstItem="inB-G3-hzE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="ghv-fg-IXD"/>
+                    <constraint firstItem="inB-G3-hzE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="ghv-fg-IXD"/>
                     <constraint firstItem="JE0-rW-mBG" firstAttribute="centerY" secondItem="XgU-V7-nQX" secondAttribute="centerY" id="puR-Sj-DPa"/>
                     <constraint firstItem="inB-G3-hzE" firstAttribute="trailing" secondItem="s2L-5p-bKQ" secondAttribute="trailing" id="r2g-jn-yyS"/>
                     <constraint firstItem="gK1-X5-gjE" firstAttribute="leading" secondItem="XgU-V7-nQX" secondAttribute="trailing" constant="10" id="rAa-HZ-G5t"/>
@@ -106,6 +110,7 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="answerButton" destination="fnf-RI-mDU" id="iCL-9v-mSR"/>
                 <outlet property="difficultyLabel" destination="XgU-V7-nQX" id="JE9-wQ-xZ5"/>
                 <outlet property="difficultyView" destination="JE0-rW-mBG" id="skY-Mh-tCO"/>
                 <outlet property="numOfAnswersLabel" destination="gK1-X5-gjE" id="0dp-fT-tqG"/>
